--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,5 +1,9 @@
-  {{if eq .RunMode "dev"}}
-    {{template "debug.html" .}}
-  {{end}}
-  </body>
+        </main>
+        <footer>
+            <div>2017 &copy; K2SS All rights reserved.</div>
+        </footer>
+        {{if eq .RunMode "dev"}}
+            {{template "debug.html" .}}
+        {{end}}
+    </body>
 </html>
